infra/k8s-prd/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.ecommerce-app-prd.xyz
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              service:
                name: auth-srv
                port: 
                  number: 3000
          - path: /api/items/?(.*)
            backend:
              service:
                name: items-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            backend:
              service
                name: orders-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*)
            backend:
              service:
                name: payments-srv
                port: 
                  number: 3000
          - path: /?(.*)
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
---
# External name service to map to the ingress-srv (to have a shorter name for the ingress-srv)
# Exists in the default namespace unlike the ingress-srv
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx-srv
  namespace: default
spec:
  type: ExternalName
  externalName: ingress-nginx-controller.ingress-nginx.svc.cluster.local
  ports:
    - port: 80
---
# Load balancer service to configure the external load balancer
# This is required so the nginx LB can function properly as a proxy between services
# Also provisioned by ingress nginx
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.ecommerce-app-prd.xyz"
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
